--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gilbarbara/react-range-slider": "^0.5.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-slider": "^10.6.2",
+    "mdbreact": "^4.24.0",
     "pretty-checkbox": "^3.0.3",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
